frontend da pg. de projetos

--- a/src/views/profileProjects.ejs
+++ b/src/views/profileProjects.ejs
@@ -56,7 +56,7 @@
                 <p class="project-desc-title">Descricao do novo projeto</p>
                 <textarea name="projectDesc" class="project-desc-txtarea" rows="10" required></textarea>
             </div>
-            <div class="project-image">
+            <div class="project-image-select-container">
                 <label for="image-input" class="img-input-label" >Escolher imagens do novo projeto</label>
                 <input type="file" multiple name="imageInput" class="image-input" id="image-input">
             </div>
