--- a/src/public/css/profileProject.css
+++ b/src/public/css/profileProject.css
@@ -142,7 +142,7 @@ a{
     border: 1px solid #ededed;
 
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
-    max-width: 50%;
+    width: 50vw;
     transition: 0.2s;
 }
 
@@ -150,10 +150,15 @@ a{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
 }
 
 .project-image{
-    margin: 5px 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 5% 10%;
+    max-width: 30%;
 }
 
 .project-description{
