--- a/src/public/css/profileProject.css
+++ b/src/public/css/profileProject.css
@@ -182,6 +182,33 @@ a{
     margin-bottom: 2%;
 }
 
+.update-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+    margin: 3% 0px;
+}
+
+.delete-icon{
+    transition: 0.8s;
+}
+.delete-icon:hover{
+    color: red;
+    cursor: pointer;
+    transition: 0.8s;
+}
+
+.update-icon{
+    transition: 0.8s;
+}
+.update-icon:hover{
+    color: #7CB9E8;
+    cursor: pointer;
+    transition: 0.8s;
+}
+
+
 .img-input-label{
     background-color: #fd5c63;
     border-radius: red;
