--- a/src/public/css/profileProject.css
+++ b/src/public/css/profileProject.css
@@ -158,7 +158,12 @@ a{
     flex-direction: column;
     align-items: center;
     margin: 5% 10%;
-    max-width: 30%;
+    /* max-width: 30%; */
+    width: 100%;
+}
+
+.project-image-loaded{
+    width: 10vw;
 }
 
 .project-description{
