--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -17,29 +17,8 @@
     <title><%= context.profileName %></title>
 </head>
 <body>
-    <% if(context.auth) { %>
-    <div class="main-header">
-        <div class="home-container">
-            <a href="/v1/"><p class="home-btn">Home</p></a>
-        </div>
-        <div class="academic-logo-container">
-            <img src="/images/white-logo.png" alt="academic-logo" class="academic-logo">
-        </div>
-        <div class="edit-container">
-            <p class="edit-btn">Editar</p>
-        </div>
-    </div>
-    <% } else { %>
-        <div class="main-header">
-            <div class="home-container">
-                <a href="/v1/"><p class="home-btn">Home</p></a>
-            </div>
-            <div class="academic-logo-container">
-                <img src="/images/white-logo.png" alt="academic-logo" class="academic-logo">
-            </div>
-        </div>
-    <% } %>
-
+    
+    <%- include('./partials/default-header') %>
 
     <div class="main-container">
         <div class="profile-img-container">
@@ -58,27 +37,32 @@
     <div class="middle-container">
         <div class="project-list-container">
             <div class="list-title">
-                <p class="title">Exiba seus projetos no seu perfil</p>
+                <p class="title">Exiba e gerencie seus projetos no seu perfil</p>
                 <div class="add-btn">
-                    <p class="add-btn-text">Adicionar</p>
+                    <a href="/v1/profile/<%= context.id %>/projects"><p class="add-btn-text">Adicionar</p></a>
                 </div>
             </div>
             
-            <% if( context.foundProjects.length > 0){ %>
+            <% if(context.data.length > 0){ %>
                 <div class="project-list">
-                    <% context.foundProjects.forEach(function(project) { %>
+                    <% for(let i=0;  i< context.data.length; i++){ %>
                     <div class="project-container">
-                        <div class="project-image-carrousel">
-                        <img src="" alt="project-image" class="project-image">
-                    </div>
+                        <div class="image-group">
+                            <% for(let j=0; j < context.data[i].image_data.length; j++){ %>
+                            <div class="project-image-carrousel">
+                                <img src="data:<%= context.data[i].image_mimetype[j]%>;base64, <%= context.data[i].image_data[j].toString('base64')%>" alt="project-image" class="project-image">
+                            </div>
+                            <% } %>
+                        </div>
                     <div class="project-description-container">
-                        <p class="project-description"><% project.project_description %></p>
+                        <p class="project-description"><%= context.data[i].project_description %></p>
                     </div>
                 </div>
-                    <% }) %>
+                <% } %>
             </div>
             <% } %>
         </div>
     </div>
 </body>
 </html>
+
