--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -17,10 +17,7 @@
 
 </head>
 <body>
-    <div class="main-header">
-        <img src="/images/academic-logo.png" alt="academic-logo" class="academic-logo">
-        <p class="header-title">Registro</p>
-    </div>
+    <%- include('./partials/default-header'); %>
 
     <div class="main-container">
         <form action="/v1/register" method="POST"class="form-data">
