--- a/src/public/css/profileProject.css
+++ b/src/public/css/profileProject.css
@@ -21,9 +21,7 @@ a{
 
     width: 100%;
     height: 10vh;
-    /* background-color: #282828; */
     background-color: #181818;
-    /* box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px; */
 }
 
 .home-container{
@@ -74,7 +72,7 @@ a{
 }
 
 .academic-logo{
-    width: 10vw;
+    min-width: 10vw;
     height: 13vh;
     object-fit: cover;
     margin-top: -1vh;
@@ -135,7 +133,7 @@ a{
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+
     padding: 13px;
     margin-bottom: 5%;
     border-radius: 8px;
@@ -158,8 +156,8 @@ a{
     flex-direction: column;
     align-items: center;
     margin: 5% 10%;
-    /* max-width: 30%; */
     width: 100%;
+    margin-bottom: 5%;
 }
 
 .project-image-loaded{
@@ -179,9 +177,6 @@ a{
     margin: 18px 0;
 }
 
-.project-image{
-    margin-bottom: 5%;
-}
 
 .project-desc-title{
     margin-bottom: 2%;
@@ -230,6 +225,12 @@ a{
     transition: 0.2s;
 }
 
+.input-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .submit-container{
     display: flex;
     flex-direction: column;
@@ -255,6 +256,24 @@ a{
     box-shadow: rgba(240, 46, 46, 0.4) 0px 5px, rgba(240, 46, 62, 0.3) 0px 10px, rgba(240, 46, 46, 0.2) 0px 15px, rgba(240, 46, 46, 0.1) 0px 20px, rgba(240, 46, 46, 0.05) 0px 25px;
 
     transition: 0.9s;
+}
+
+.loaded-images{
+    display: none;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
+    width: 100%;
+}
+
+.uploaded-image{
+    margin: 0px 5%;
+    width: 15vw;
+}
+
+
+.delete-icon{
 }
 
 input[type="file"]{
