--- a/src/public/css/register.css
+++ b/src/public/css/register.css
@@ -9,47 +9,84 @@ body{
     width: 100%;
 }
 
-.academic-logo{
-    width: 10%;
-    height: 25%;
-    object-fit: cover;
-    margin-left: 2vw;
-}
 
 i {
     width: 20px;
     height: 15px;
 }
 
-
 .main-header{
-    width: 100%;
-    
     display: flex;
     flex-direction: row;
     align-items: center;
-    
-    background-color: #F0F0F0;
-    border-bottom: 1px solid #bcbcbc;
+    justify-content: space-between;
+
+    width: 100%;
+    height: 10vh;
+    background-color: #181818;
 }
 
-.header-title{
-    font-family: 'Roboto';
-    font-size: 36px;
-    font-weight: 600;
-    position: absolute;
-    right: 50%
+.home-container{
+    border: 1px solid #00FA9A;
+    background-color: #00FA9A;
+    border-radius: 5px;
+    padding: 15px;
+    margin-left: 8%;
+    transition: 0.5s;
+    color: #fff;
+}
 
+.home-container > a{
+    color: #fff;
+}
+
+.home-container:hover{
+    border: 1px solid #00FF40;
+    color: #fff;
+    background-color: #1B4D3E;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.edit-container{
+    color: #fff;
+    background-color: #1E90FF;
+    border: 1px solid #1E90FF;
+    padding: 15px;
+    margin-right: 8%;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+.edit-container:hover{
+    color: #F0F8FF;
+    background-color: #002244;
+    border: 1px solid #7CB9E8;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.academic-logo-container{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: relative;
+}
+
+.academic-logo{
+    min-width: 10vw;
+    height: 13vh;
+    object-fit: cover;
+    margin-top: -1vh;
+    margin: auto;
 }
 
 .main-container{
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
     align-items: center;
     height: 100%;
     padding: 20px;
-    background-color: #e0e0e0;
+    background-color: #696969;
 }
 
 .main-container > *{
@@ -76,6 +113,10 @@ input[type=text], input[type=email], input[type=password] {
     margin-left: 3px;
 }
 
+.radio-label{
+    color: #fff;
+
+}
 
 .submit-btn-container{
     display: flex;
