--- a/src/views/createProfile.ejs
+++ b/src/views/createProfile.ejs
@@ -14,6 +14,8 @@
     <!-- FONT AWESOME CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
+    <!-- ATUALIZA FOTO DE PERFIL -->
+    <script src="/utils/updateImage.js"></script>
 </head>
 <body>
     <div class="main-container">
@@ -27,7 +29,7 @@
         <div class="profile-pic-container">
             <img class="profile-image" src="/images/default_user.png" alt="">
             <label for="update-image" class="label-update-image">Alterar imagem</label>
-            <input type="file" class="update-image" id="update-image" name="profile-image" enctype="multipart/form-data">
+            <input type="file" accept="image/*" onChange="updateImage(event)"  class="update-image" id="update-image" name="profile-image" enctype="multipart/form-data">
         </div>
         <div class="profile-desc-container">
             <% if(context.profileData.newUser && context.profileData.newUser.cpf ){ %>
