--- a/src/views/profileProjects.ejs
+++ b/src/views/profileProjects.ejs
@@ -89,6 +89,7 @@
                 })
             }
 
+            //Pegar o id para redirecionamento
             for(update of updateBtn){
                 update.addEventListener('click', (e) => {
                     let id = e.srcElement.dataset.projectId;
