--- a/src/views/profileContacts.ejs
+++ b/src/views/profileContacts.ejs
@@ -21,12 +21,13 @@
                 <p class="profile-name">Contatos</p>
             </div>
             
-        <form action="/v1/api/create/contacts" class="form-data" method="POST" enctype="multipart/form-data" >
+        <form action="/v1/api/create/contacts" class="form-data" method="POST">
         <div class="profile-contacts-container">
             <% if(context.email) { %>
             <div class="input-group">
                 <i class="fa-regular fa-envelope" style="color: #ff7300;"></i>
                 <input type="text" name="userEmail" class="user-email" value="<%= context.email %>" readonly required>
+                <input type="hidden" name="userEmailHidden" value="<%= context.email %>">
             </div>
             <% } %>
 
