--- a/src/public/css/editProject.css
+++ b/src/public/css/editProject.css
@@ -5,6 +5,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+a{
+    text-decoration: none !important;
+}
+
 .main-header{
     display: flex;
     flex-direction: row;
@@ -129,7 +133,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    height: 5vh;
+    margin: 4vh 0px;;
 }
 
 .update-icon:hover{
@@ -155,6 +159,19 @@
     margin: 3vh 0;
 }
 
+.image-loaded{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid red;
+}
+
+.project-image{
+    max-width: 90%;
+}
+
+
 .project-image-group{
     display: flex;
     flex-direction: column;
@@ -165,12 +182,15 @@
 }
 
 .submit-btn{
-    padding: 8px;
+    padding: 13px 28px;
     border-radius: 8px;
     border: none;
     color: #fff;
     background-color: #7CB9E8;
+    transition: 0.5s;
 }
 .submit-btn:hover{
+    background-color: #3457D5;
     cursor: pointer;
+    transition: 0.5s;
 }
