--- a/src/public/css/editProject.css
+++ b/src/public/css/editProject.css
@@ -103,7 +103,7 @@ a{
     padding: 13px;
 }
 
-.project-container{
+.project-container, .form-data{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -165,6 +165,10 @@ a{
     align-items: center;
     justify-content: center;
     border: 1px solid red;
+}
+
+.alter-image-label{
+    display: none;
 }
 
 .project-image{
