--- a/src/public/css/editProject.css
+++ b/src/public/css/editProject.css
@@ -164,7 +164,7 @@ a{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid red;
+    border: 2px solid #D0D0D0;
 }
 
 .alter-image-label{
