--- a/src/views/editProject.ejs
+++ b/src/views/editProject.ejs
@@ -45,7 +45,7 @@
                     </div>
                     <div class="alter-group">
                         <label for="alterImage" class="alter-image-label">
-                            <input type="file" name="ImageFile" id="alter-image" class="alter-image-<%= context.data[0].image_id[i] %>">
+                            <input type="file" accept="image/*" name="ImageFile" id="alter-image" class="alter-image-<%= context.data[0].image_id[i] %>">
                         </label>
                         <i class="fa-solid fa-pen fa-xl update-icon" data-project-id="<%= context.data[0].image_id[i] %>"></i>
                         
