/api/search: endpoint de busca e redirect

--- a/src/views/search.ejs
+++ b/src/views/search.ejs
@@ -31,14 +31,14 @@
 
     <div class="container">
         <div class="search-container">
-            <form class="search-data" action="/v1/search" method="POST">
+            <form class="search-data" action="/v1/api/search" method="POST">
                 <div class="name-input-container">
                     <input type="text" name="nameInput" class="name-input text-ipt" placeholder="Nome">
                 </div>
 
                 <div class="secondary-input-container">
                     <div class="input-group">
-                        <input list="course-list" type="text" name="cursoInput" class="curso-input text-ipt" placeholder="Curso de Formação">
+                        <input list="course-list" type="text" name="courseInput" class="curso-input text-ipt" placeholder="Curso de Formação">
                         <input type="text" name="specInput" class="spec-input text-ipt" placeholder="Especialização">
                     </div>
 
