--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -23,7 +23,9 @@
                 <form action="/v1/api/login" method="POST" class="login-form">
                     <input type="email" name="emailInput" placeholder="Email" class="email-input">
                     <input type="password" name="passwordInput" placeholder="Senha" class="password-input">
-                    <input type="submit" class="login-btn" value="Login">
+                    <div class="login-btn-container">
+                        <input type="submit" class="login-btn" value="Login">
+                    </div>
                 </form>
             </div>
         </div>
