--- a/src/views/editProject.ejs
+++ b/src/views/editProject.ejs
@@ -13,6 +13,9 @@
     <!-- FONT AWESOME CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    
+    <script src="/utils/loadImage.js"></script>
+    <script src="/utils/updateProjectImage.js"></script>
     <!-- AUTO RESIZE -->
     <script src="/utils/textAreaAutoResize.js" ></script>
 
@@ -44,11 +47,11 @@
                 <% for(let i=0; i< context.data[0].image_data.length; i++) { %>
                 <div class="image-container">
                     <div class="image-loaded">
-                        <img class="project-image" src="data:<%= context.data[0].image_mimetype[i]%>;base64, <%= context.data[0].image_data[i].toString('base64')%>" alt="project-image">
+                        <img class="project-image image-<%= context.data[0].image_id[i] %>" src="data:<%= context.data[0].image_mimetype[i]%>;base64, <%= context.data[0].image_data[i].toString('base64')%>" alt="project-image">
                     </div>
                     <div class="alter-group">
                         <label for="alterImage" class="alter-image-label">
-                            <input type="file" accept="image/*" name="ImageFile" id="alter-image" class="alter-image-<%= context.data[0].image_id[i] %>">
+                            <input type="file" onChange="updateImage(event)" accept="image/*" name="ImageFile" id="alter-image" class="alter-image-<%= context.data[0].image_id[i] %>">
                         </label>
                         <i class="fa-solid fa-pen fa-xl update-icon" data-project-id="<%= context.data[0].image_id[i] %>"></i>
                         
@@ -79,7 +82,6 @@
         const updateIcon = document.querySelectorAll('.update-icon');
         const removeIcon = document.querySelectorAll('.delete-icon');
         const alterImageInputFile = document.querySelectorAll(`#alter-image`); 
-        
 
         for(let i=0; i<removeIcon.length; i++){
             removeIcon[i].addEventListener('click', (e) => {
