--- a/src/public/css/searchResults.css
+++ b/src/public/css/searchResults.css
@@ -7,6 +7,12 @@
 
 a{
     text-decoration: none !important;
+    color: black;
+    transition: 0.5s;
+}
+a:hover{
+    color: #5A4FCF;
+    transition: 0.5s;
 }
 
 body{
@@ -110,11 +116,21 @@ body{
 .name-desc-group{
     display: flex;
     flex-direction: column;
+    width: 100%;
     text-align: justify;
 }
 
 .profile-name, .profile-description{
     margin: 1.5% 3.5%;
+}
+
+.found-name{
+    font-size: 1.2vw;
+    font-weight: 600;
+}
+
+.found-desc{
+    font-size: 1vw;;
 }
 
 .not-found-container{
@@ -185,7 +201,8 @@ body{
     color: black;
     padding: 8px;
     transition: 0.5s;
-    font-size: 1.7vw;
+    /* font-size: 1.7vw; */
+    font-size: 1vw;
 }
 
 .active-page{
